[RW-10035][risk=no] Removed several deprecation warnings. (#7694)