@@ -353,12 +353,12 @@ public final class SearchGroupItemQueryBuilder {
               String ageNamedParameter =
                   QueryParameterUtil.addQueryParameterValue(
                       queryParams,
-                      QueryParameterValue.int64(new Long(attribute.getOperands().get(0))));
+                      QueryParameterValue.int64(Long.valueOf(attribute.getOperands().get(0))));
               if (attribute.getOperands().size() > 1) {
                 String ageNamedParameter1 =
                     QueryParameterUtil.addQueryParameterValue(
                         queryParams,
-                        QueryParameterValue.int64(new Long(attribute.getOperands().get(1))));
+                        QueryParameterValue.int64(Long.valueOf(attribute.getOperands().get(1))));
                 ageNamedParameter = ageNamedParameter + AND + ageNamedParameter1;
               }
               String ageSql =
@@ -614,12 +614,14 @@ public final class SearchGroupItemQueryBuilder {
       Map<String, QueryParameterValue> queryParams, Attribute attribute) {
     String operandsParam1 =
         QueryParameterUtil.addQueryParameterValue(
-            queryParams, QueryParameterValue.float64(new Double(attribute.getOperands().get(0))));
+            queryParams,
+            QueryParameterValue.float64(Double.valueOf(attribute.getOperands().get(0))));
     String valueExpression;
     if (attribute.getOperator().equals(Operator.BETWEEN)) {
       String operandsParam2 =
           QueryParameterUtil.addQueryParameterValue(
-              queryParams, QueryParameterValue.float64(new Double(attribute.getOperands().get(1))));
+              queryParams,
+              QueryParameterValue.float64(Double.valueOf(attribute.getOperands().get(1))));
       valueExpression = operandsParam1 + AND + operandsParam2;
     } else {
       valueExpression = operandsParam1;
@@ -660,7 +662,7 @@ public final class SearchGroupItemQueryBuilder {
             QueryParameterUtil.addQueryParameterValue(
                 queryParams,
                 (isAgeAtEvent(modifier) || isEncounters(modifier) || isCati(modifier))
-                    ? QueryParameterValue.int64(new Long(operand))
+                    ? QueryParameterValue.int64(Long.valueOf(operand))
                     : QueryParameterValue.date(operand));
         modifierParamList.add(modifierParameter);
       }
@@ -706,7 +708,7 @@ public final class SearchGroupItemQueryBuilder {
       for (String operand : occurrences.getOperands()) {
         String modifierParameter =
             QueryParameterUtil.addQueryParameterValue(
-                queryParams, QueryParameterValue.int64(new Long(operand)));
+                queryParams, QueryParameterValue.int64(Long.valueOf(operand)));
         modifierParamList.add(modifierParameter);
       }
       modifierSql
@@ -773,7 +775,7 @@ public final class SearchGroupItemQueryBuilder {
                 .flatMap(param -> param.getAttributes().stream())
                 .flatMap(attribute -> attribute.getOperands().stream())
                 .filter(conceptId -> !conceptId.equals("1740639"))
-                .map(Long::new)
+                .map(Long::valueOf)
                 .toArray(Long[]::new);
         String conceptIdsParam =
             QueryParameterUtil.addQueryParameterValue(
